Skip torchvision 0.9.0 as it is incompatible with torch nightly
torchvision nightly has not bump to 0.10.0 alpha, so pip installs
torchvision==0.9.0 even with the --pre flag.

Signed-off-by: Bairen Yi <yibairen.byron@bytedance.com>

--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -20,7 +20,7 @@ jobs:
         python3 -m pip install pytest pybind11 numpy
     - name: Install pytorch_nightly depends
       run: |
-        python3 -m pip install --pre torch torchvision -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
+        python3 -m pip install --pre torch torchvision!=0.9.0 -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
     - name: Get LLVM Hash
       id: get-llvm-hash
       run: echo "::set-output name=hash::$(git submodule status)"
@@ -59,7 +59,7 @@ jobs:
         python3 -m pip install pytest pybind11 numpy
     - name: Install pytorch_nightly depends
       run: |
-        python3 -m pip install --pre torch torchvision -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
+        python3 -m pip install --pre torch torchvision!=0.9.0 -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
     - name: Get LLVM Hash
       id: get-llvm-hash
       run: echo "::set-output name=hash::$(git submodule status)"
