Install python files and extension libraries
As with MLIR python extensions, install these in /python

--- a/frontends/pytorch/python/CMakeLists.txt
+++ b/frontends/pytorch/python/CMakeLists.txt
@@ -4,3 +4,5 @@
 ################################################################################
 
 npcomp_python_create_symlinks(${CMAKE_BINARY_DIR}/python ${CMAKE_CURRENT_SOURCE_DIR})
+
+install(DIRECTORY python DESTINATION python COMPONENT python)
