Move Torch recognize-fallback pass implementation to another library

--- a/lib/RefBackend/CMakeLists.txt
+++ b/lib/RefBackend/CMakeLists.txt
@@ -1,17 +1,18 @@
 add_subdirectory(Runtime)
 add_subdirectory(JITHelpers)
+add_subdirectory(Torch)
 
 add_npcomp_library(NPCOMPRefBackend
   RefBackend.cpp
   LowerToLLVM.cpp
   LowerToRefbackrtABI.cpp
-  RecognizeTorchFallbackPass.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SRC_DIR}/include/npcomp/RefBackend
 
   DEPENDS
   NPCOMPRefBackendPassIncGen
+  NPCOMPRefBackendTorch
 
   LINK_COMPONENTS
   Core
