--- a/lib/Dialect/Numpy/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Numpy/Transforms/CMakeLists.txt
@@ -2,6 +2,7 @@ add_npcomp_conversion_library(NPCOMPNumpyPasses
   ArrayToTensor.cpp
   Passes.cpp
   PublicFunctionToTensor.cpp
+  RefinePublicReturn.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/npcomp/Dialect/Numpy/Transforms
