Add npcomp-verify-backend-contract pass.
This pass verifies that a given module satisfies the contract that we
have for backends. This is phrased as an "allowlist", because we want to
keep this interface tight. Also, this gives much better diagnostics than
a backend randomly crashing or failing to compile would (though they
could still be improved).

This was especially painful because if we had
`tensor<?x!numpy.any_dtype>` slip through, at some point RefBackend
would convert it to a memref type and trip the "verify type invariants"
assertion which gives no location or anything and crashed the process,
which was very unpleasant.

We implement this with the dialect conversion framework, which works
reasonably well and was quick to put together and familiar, but is still
very "op oriented". We probably want to make this hand-rolled
eventually, especially the error reporting (the most useful kind of
error for a dialect conversion user is not necessarily the best for this
use case). Also, in production, these error will go to users, and need
to be surfaced carefully such as "the compiler needs a type annotation
on this function parameter" which in general requires some special
analysis, wordsmithing, and overall awareness of the e2e use case (such
as how much we can lean into certain source locations) to provide a
meaningful user-level diagnostic.

Also, add `inline` to the current frontend lowering pass pipeline to
allow slightly more complicated programs that otherwise would fail on
shape inference.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,17 +1,9 @@
+add_subdirectory(Backend)
 add_subdirectory(CAPI)
 add_subdirectory(Conversion)
 add_subdirectory(Dialect)
 add_subdirectory(RefBackend)
 add_subdirectory(Typing)
-
-if(NPCOMP_ENABLE_REFJIT)
-  add_subdirectory(Backend/RefJIT)
-endif()
-
-# Currently this doesn't introduce any actual dependency on IREE, so add it
-# unconditionally.
-# TODO: Put this behind the NPCOMP_ENABLE_IREE flag.
-add_subdirectory(Backend/IREE)
 
 ################################################################################
 # Setup the initialization target.
@@ -34,6 +26,7 @@ add_npcomp_library(NPCOMPInitAll
 
   PUBLIC
   # Local depends
+  NPCOMPCommonBackend
   NPCOMPIREEBackend
   NPCOMPRefBackend
   NPCOMPRefbackDialect
