Add some extra libraries to link, and remove dependency on libMLIR.

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -15,7 +15,10 @@ add_npcomp_library(NPCOMPConversionPasses
   Core
 
   LINK_LIBS PUBLIC
+  NPCOMPATenToTCF
   NPCOMPBasicpyToSTD
   NPCOMPNumpyToTCF
+  NPCOMPTCFToLinalg
+  NPCOMPTCFToStd
   NPCOMPTCFToTCP
 )
