--- a/lib/Dialect/ATen/Transforms/CMakeLists.txt
+++ b/lib/Dialect/ATen/Transforms/CMakeLists.txt
@@ -15,4 +15,9 @@ add_npcomp_conversion_library(NPCOMPATenPasses
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRPass
+  MLIRTransformUtils
+  MLIRLLVMIR
+  MLIRStandardToLLVM
+  NPCOMPATenDialect
+  NPCOMPTorchDialect
 )
