--- a/include/npcomp/Dialect/Numpy/Transforms/CMakeLists.txt
+++ b/include/npcomp/Dialect/Numpy/Transforms/CMakeLists.txt
@@ -2,5 +2,4 @@ set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls)
 add_public_tablegen_target(NPCOMPNumpyPassIncGen)
 
-add_mlir_doc(Passes -gen-pass-doc NPCOMPNumpyTransforms ./)
-
+add_mlir_doc(Passes NPCOMPNumpyTransforms ./ -gen-pass-doc)
