--- a/include/npcomp/Backend/Common/CMakeLists.txt
+++ b/include/npcomp/Backend/Common/CMakeLists.txt
@@ -2,4 +2,4 @@ set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls)
 add_public_tablegen_target(NPCOMPCommonBackendPassIncGen)
 
-add_mlir_doc(Passes -gen-pass-doc CommonBackendPasses ./)
+add_mlir_doc(Passes CommonBackendPasses ./ -gen-pass-doc)
