--- a/include/npcomp/Dialect/Numpy/IR/CMakeLists.txt
+++ b/include/npcomp/Dialect/Numpy/IR/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_mlir_dialect(NumpyOps numpy)
-add_mlir_doc(NumpyDialect -gen-dialect-doc NumpyDialect Numpy/)
-add_mlir_doc(NumpyOps -gen-op-doc NumpyOps Numpy/)
+add_mlir_doc(NumpyDialect NumpyDialect Numpy/ -gen-dialect-doc)
+add_mlir_doc(NumpyOps NumpyOps Numpy/ -gen-op-doc)
