--- a/include/npcomp/Dialect/TCF/Transforms/CMakeLists.txt
+++ b/include/npcomp/Dialect/TCF/Transforms/CMakeLists.txt
@@ -2,5 +2,4 @@ set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls)
 add_public_tablegen_target(NPCOMPTCFPassIncGen)
 
-add_mlir_doc(Passes -gen-pass-doc NPCOMPTCFTransforms ./)
-
+add_mlir_doc(Passes NPCOMPTCFTransforms ./ -gen-pass-doc)
