--- a/include/npcomp/Dialect/TCP/Transforms/CMakeLists.txt
+++ b/include/npcomp/Dialect/TCP/Transforms/CMakeLists.txt
@@ -2,5 +2,4 @@ set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls)
 add_public_tablegen_target(NPCOMPTCPPassIncGen)
 
-add_mlir_doc(Passes -gen-pass-doc NPCOMPTCPTransforms ./)
-
+add_mlir_doc(Passes NPCOMPTCPTransforms ./ -gen-pass-doc)
