--- a/include/npcomp/RefBackend/CMakeLists.txt
+++ b/include/npcomp/RefBackend/CMakeLists.txt
@@ -2,4 +2,4 @@ set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls)
 add_public_tablegen_target(NPCOMPRefBackendPassIncGen)
 
-add_mlir_doc(Passes -gen-pass-doc RefBackendPasses ./)
+add_mlir_doc(Passes RefBackendPasses ./ -gen-pass-doc)
