--- a/include/npcomp/Typing/Transforms/CMakeLists.txt
+++ b/include/npcomp/Typing/Transforms/CMakeLists.txt
@@ -2,4 +2,4 @@ set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls)
 add_public_tablegen_target(NPCOMPTypingTransformsPassIncGen)
 
-#add_mlir_doc(Passes -gen-pass-doc Transforms ./)
+#add_mlir_doc(Passes Transforms ./ -gen-pass-doc)
