--- a/lib/Dialect/Torch/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Torch/Transforms/CMakeLists.txt
@@ -2,6 +2,7 @@ add_npcomp_conversion_library(NPCOMPTorchPasses
   AdjustCallingConventions.cpp
   Passes.cpp
   GlobalizeObjectGraph.cpp
+  InlineGlobalSlots.cpp
   PrepareForGlobalizeObjectGraph.cpp
   RefineTypes.cpp
 
