--- a/lib/Dialect/ATen/IR/CMakeLists.txt
+++ b/lib/Dialect/ATen/IR/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_npcomp_dialect_library(NPCOMPATenDialect
   ATenDialect.cpp
+  ATenOps.cpp
   ATenDialectOpStats.cpp
 
   ADDITIONAL_HEADER_DIRS
