Add AllowsTypeRefinement trait and use it to improve RefineTypes
This trait lets us model the semantics of various aten/torch/numpy ops
that are insensitive to type refinements. This replaces
hardcoded/inconsistent checks for this property.

To show usage of this new trait, we fix up some old uses, and improve
RefineTypes to be smarter about rewriting with this trait.

--- a/lib/Dialect/Torch/IR/CMakeLists.txt
+++ b/lib/Dialect/Torch/IR/CMakeLists.txt
@@ -20,4 +20,5 @@ add_npcomp_dialect_library(NPCOMPTorchDialect
   MLIRSideEffectInterfaces
   NPCOMPBasicpyDialect
   NPCOMPNumpyDialect
+  NPCOMPInterfaces
 )
