--- a/lib/Dialect/Torch/IR/CMakeLists.txt
+++ b/lib/Dialect/Torch/IR/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_npcomp_dialect_library(NPCOMPTorchDialect
   TorchDialect.cpp
   TorchOps.cpp
+  TorchUtils.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/npcomp/Dialect/Torch
@@ -18,6 +19,5 @@ add_npcomp_dialect_library(NPCOMPTorchDialect
   MLIRControlFlowInterfaces
   MLIRSideEffectInterfaces
   NPCOMPBasicpyDialect
-  NPCOMPNumpyDialect
   NPCOMPInterfaces
 )
