--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -16,11 +16,11 @@ add_npcomp_library(NPCOMPConversionPasses
   Core
 
   LINK_LIBS PUBLIC
-  NPCOMPATenToLinalg
-  NPCOMPATenToTCF
   NPCOMPBasicpyToSTD
   NPCOMPNumpyToTCF
   NPCOMPTCFToLinalg
   NPCOMPTCFToStd
   NPCOMPTCFToTCP
+  NPCOMPTorchToLinalg
+  NPCOMPTorchToStd
 )
