Make BUILD_SHARED_LIBS optional.

--- a/tools/npcomp-shlib/CMakeLists.txt
+++ b/tools/npcomp-shlib/CMakeLists.txt
@@ -32,6 +32,11 @@ foreach (lib ${npcomp_libs})
   list(APPEND _DEPS  $<TARGET_PROPERTY:${lib},LINK_LIBRARIES>)
 endforeach()
 
+# Link to MLIR dylib if requested.
+if(NPCOMP_LINK_MLIR_DYLIB)
+  list(PREPEND _DEPS MLIR)
+endif()
+
 # Note: Does not use add_npcomp_library, which is used for things that go
 # *into* the libNPCOMP.so. This is building the shared library, so use
 # a higher-level rule.
