Add TorchToSCF pass.
1. Add TorchToSCF pass.
2. Convert prim.If and prim.If.yield.

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(TorchToLinalg)
+add_subdirectory(TorchToSCF)
 add_subdirectory(TorchToStd)
 add_subdirectory(BasicpyToStd)
 add_subdirectory(NumpyToTCF)
