--- a/include/npcomp/Dialect/Basicpy/IR/CMakeLists.txt
+++ b/include/npcomp/Dialect/Basicpy/IR/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LLVM_TARGET_DEFINITIONS ${dialect}.td)
 mlir_tablegen(${dialect}.h.inc -gen-op-decls)
 mlir_tablegen(${dialect}.cpp.inc -gen-op-defs)
 mlir_tablegen(${dialect}Dialect.h.inc -gen-dialect-decls -dialect=${dialect_namespace})
+mlir_tablegen(${dialect}Dialect.cpp.inc -gen-dialect-defs -dialect=${dialect_namespace})
 mlir_tablegen(${dialect}Enums.h.inc -gen-enum-decls)
 mlir_tablegen(${dialect}Enums.cpp.inc -gen-enum-defs)
 add_public_tablegen_target(MLIR${dialect}IncGen)
