--- a/lib/Conversion/TCFToLinalg/CMakeLists.txt
+++ b/lib/Conversion/TCFToLinalg/CMakeLists.txt
@@ -15,6 +15,6 @@ add_npcomp_conversion_library(NPCOMPTCFToLinalg
   MLIRPass
   MLIRTransforms
   MLIRShape
-  MLIRMemRef
+  MLIRTensor
   NPCOMPTCFDialect
 )
