--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -43,8 +43,10 @@ add_npcomp_library(NPCOMPInitAll
   NPCOMPTCFPasses
   NPCOMPTypingPasses
 
-  ${npcomp_dialect_libs}
+  # TODO: We shouldn't need npcomp_conversion_libs here, but we have
+  # some dialect transform libraries accumulating into that property.
   ${npcomp_conversion_libs}
+  ${npcomp_dialect_libs}
   ${mlir_dialect_libs}
   ${mlir_conversion_libs}
 )
