--- a/tools/npcomp-opt/CMakeLists.txt
+++ b/tools/npcomp-opt/CMakeLists.txt
@@ -2,10 +2,16 @@
 # binaries with the python packages for hacking/debugging.
 add_npcomp_executable(npcomp-opt npcomp-opt.cpp)
 
+get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
+get_property(conversion_libs GLOBAL PROPERTY MLIR_CONVERSION_LIBS)
+
 target_link_libraries(npcomp-opt PRIVATE
-  # Shared library deps first ensure we get most of what we need from libraries.
-  NPCOMP
-  MLIR
+  MLIROptLib
+  NPCOMPInitAll
+
+  # TODO: Remove these in favor of interface deps.
+  ${dialect_libs}
+  ${conversion_libs}
 )
 
 mlir_check_all_link_libraries(npcomp-opt)
