--- a/frontends/pytorch/CMakeLists.txt
+++ b/frontends/pytorch/CMakeLists.txt
@@ -1,4 +1,46 @@
 #-------------------------------------------------------------------------------
+# Sub project setup
+#-------------------------------------------------------------------------------
+
+cmake_minimum_required(VERSION 3.13.4)
+
+if(POLICY CMP0068)
+  cmake_policy(SET CMP0068 NEW)
+  set(CMAKE_BUILD_WITH_INSTALL_NAME_DIR ON)
+endif()
+
+if(POLICY CMP0075)
+  cmake_policy(SET CMP0075 NEW)
+endif()
+
+if(POLICY CMP0077)
+  cmake_policy(SET CMP0077 NEW)
+endif()
+
+project(npcomp_pytorch LANGUAGES CXX C)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
+
+#-------------------------------------------------------------------------------
+# Setup PyTorch
+#-------------------------------------------------------------------------------
+
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
+include(NpcompPyTorch)
+NpcompProbeForPyTorchInstall()
+find_package(Torch 1.8 REQUIRED)
+
+NpcompConfigurePyTorch()
+
+#-------------------------------------------------------------------------------
+# Output paths
+#-------------------------------------------------------------------------------
+
+if(NOT MLIR_NPCOMP_PYTHON_PACKAGES_DIR)
+  set(MLIR_NPCOMP_PYTHON_PACKAGES_DIR "${CMAKE_CURRENT_BINARY_DIR}/python_packages")
+endif()
+
+#-------------------------------------------------------------------------------
 # Subdirectories
 #-------------------------------------------------------------------------------
 
