--- a/frontends/pytorch/python/CMakeLists.txt
+++ b/frontends/pytorch/python/CMakeLists.txt
@@ -3,4 +3,5 @@
 # Collapse all local python sources to the project level python/ directory.
 ################################################################################
 
-npcomp_python_create_symlinks(${CMAKE_BINARY_DIR}/python ${CMAKE_CURRENT_SOURCE_DIR})
+npcomp_python_create_symlinks(
+  ${MLIR_NPCOMP_PYTHON_PACKAGES_DIR}/npcomp_torch ${CMAKE_CURRENT_SOURCE_DIR})
