--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,15 +1,19 @@
+include(AddMLIRPython)
+include(MLIRDetectPythonEnv)
+
 ################################################################################
 # Resources that must be packaged into the python tree
 ################################################################################
 
 file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/npcomp/compiler/backend/refjit_resources")
-add_custom_target(NPCOMPPythonResources)
+add_custom_target(NPCOMPPythonResources ALL)
 add_custom_command(
   TARGET NPCOMPPythonResources
   COMMAND ${CMAKE_COMMAND} -E copy
         # TODO: Make the runtime library work for windows.
+        # TODO: Use $<TARGET-FILE:> for this.
         ${CMAKE_BINARY_DIR}/lib/libNPCOMPCompilerRuntimeShlib${CMAKE_SHARED_LIBRARY_SUFFIX}
-        ${CMAKE_CURRENT_BINARY_DIR}/npcomp/compiler/generic/backend/libNPCOMPCompilerRuntimeShlib${CMAKE_SHARED_LIBRARY_SUFFIX}
+        ${MLIR_NPCOMP_PYTHON_PACKAGES_DIR}/npcomp_core/npcomp/compiler/generic/backend/libNPCOMPCompilerRuntimeShlib${CMAKE_SHARED_LIBRARY_SUFFIX}
 )
 add_dependencies(NPCOMPPythonResources
   NPCOMPCompilerRuntimeShlib
@@ -17,69 +21,123 @@ add_dependencies(NPCOMPPythonResources
 
 
 ################################################################################
-# Manage python source files
-################################################################################
-npcomp_python_create_symlinks(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-
-################################################################################
-# Native extensions
+# Declare sources
 ################################################################################
 
-# Normally on unix-like platforms, extensions are built as "MODULE" libraries
-# and do not explicitly link to the python shared object. This allows for
-# come greater deployment flexibility since the extension will bind to
-# symbols in the python interpreter on load. However, it also keeps the
-# linker from erroring on undefined symbols, leaving this to (usually obtuse)
-# runtime errors. Building in "SHARED" mode with an explicit link to the
-# python libraries allows us to build with the expectation of no undefined
-# symbols, which is better for development.
-# TODO(laurenzo): Windows requires linking against the PYTHON_LIBRARIES
-# TODO(laurenzo): OSX requires allowing undefined (-undefined dynamic_lookup)
-if(NPCOMP_PYTHON_BINDINGS_VERSION_LOCKED)
-  set(NPCOMP_PYEXT_LINK_MODE SHARED)
-  set(NPCOMP_PYEXT_LIBADD ${Python3_LIBRARIES})
-else()
-  set(NPCOMP_PYEXT_LINK_MODE MODULE)
-  set(NPCOMP_PYEXT_LIBADD)
-endif()
-
+set(_addl_extension_sources)
 if(NPCOMP_ENABLE_REFJIT)
-  list(APPEND NPCOMP_PYEXT_LIBADD
-    NPCOMPBackendRefJITPythonModule
-  )
+  list(APPEND _addl_extension_sources "${CMAKE_CURRENT_SOURCE_DIR}/RefJITBackend.cpp")
 endif()
 
-add_library(NPCOMPNativePyExt ${NPCOMP_PYEXT_LINK_MODE}
-  NpcompModule.cpp
+declare_mlir_python_sources(NPCOMPPythonSources
+  ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}"
+  SOURCES
+    npcomp/__init__.py
+    npcomp/decorators.py
+    npcomp/exporter.py
+    npcomp/smoketest.py
+    npcomp/types.py
+    npcomp/dialects/_ods_common.py
+  SOURCES_GLOB
+    npcomp/compiler/*.py
+    npcomp/frontends/*.py
+    npcomp/torch/*.py
+    npcomp/tracing/*.py
+    npcomp/utils/*.py
+)
+declare_mlir_python_sources(NPCOMPPythonSources.Dialects
+  ADD_TO_PARENT NPCOMPPythonSources
+)
+declare_mlir_python_sources(NPCOMPPythonExtensions)
+
+declare_mlir_python_extension(NPCOMPPythonExtensions.Core
+  MODULE_NAME _npcomp
+  ADD_TO_PARENT NPCOMPPythonExtensions
+  SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/NpcompModule.cpp
+    ${_addl_extension_sources}
+  EMBED_CAPI_LINK_LIBS
+    NPCOMPCAPI
+  PRIVATE_LINK_LIBS
+    LLVMSupport
 )
 
-set_target_properties(NPCOMPNativePyExt PROPERTIES LIBRARY_OUTPUT_DIRECTORY
-                      "${CMAKE_CURRENT_BINARY_DIR}")
-set_target_properties(NPCOMPNativePyExt PROPERTIES OUTPUT_NAME _npcomp)
-set_target_properties(NPCOMPNativePyExt PROPERTIES PREFIX
-                      "${PYTHON_MODULE_PREFIX}")
-set_target_properties(NPCOMPNativePyExt PROPERTIES SUFFIX
-                      "${PYTHON_MODULE_EXTENSION}")
+################################################################################
+# Declare dialects
+################################################################################
 
-# pybind requires binding code to be compiled with -fvisibility=hidden
-# Better code can be generated if the entire project compiles that way, but
-# that is not enforced here.
-set_target_properties(NPCOMPNativePyExt PROPERTIES CXX_VISIBILITY_PRESET "hidden")
+declare_mlir_dialect_python_bindings(
+  ADD_TO_PARENT NPCOMPPythonSources.Dialects
+  ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}"
+  TD_FILE npcomp/dialects/BasicpyBind.td
+  SOURCES npcomp/dialects/basicpy.py
+  DIALECT_NAME basicpy)
 
-get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
-get_property(conversion_libs GLOBAL PROPERTY MLIR_CONVERSION_LIBS)
+declare_mlir_dialect_python_bindings(
+  ADD_TO_PARENT NPCOMPPythonSources.Dialects
+  ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}"
+  TD_FILE npcomp/dialects/NumpyBind.td
+  SOURCES npcomp/dialects/numpy.py
+  DIALECT_NAME numpy)
 
-target_link_libraries(NPCOMPNativePyExt
-  PRIVATE
-    # Transitive dep on the shared library links most things from there.
-    NPCOMP
+declare_mlir_dialect_python_bindings(
+  ADD_TO_PARENT NPCOMPPythonSources.Dialects
+  ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}"
+  TD_FILE npcomp/dialects/TCFBind.td
+  SOURCES npcomp/dialects/tcf.py
+  DIALECT_NAME tcf)
 
-    NPCOMPInitAll
-    ${NPCOMP_PYEXT_LIBADD}
-  )
-npcomp_python_target_compile_options(NPCOMPNativePyExt)
+declare_mlir_dialect_python_bindings(
+  ADD_TO_PARENT NPCOMPPythonSources.Dialects
+  ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}"
+  TD_FILE npcomp/dialects/TorchBind.td
+  SOURCES npcomp/dialects/torch.py
+  DIALECT_NAME torch)
 
-mlir_check_all_link_libraries(NPCOMPNativePyExt)
+################################################################################
+# Build composite binaries
+################################################################################
 
-# Order dependent: Built artifacts add dependencies to the above targets.
-add_subdirectory(npcomp/dialects)
+# Bundle our own, self-contained CAPI library with all of our deps.
+add_mlir_python_common_capi_library(NPCOMPPythonCAPI
+  INSTALL_COMPONENT NPCOMPPythonModules
+  INSTALL_DESTINATION python_packages/npcomp_core/mlir/_mlir_libs
+  # NOTE: When the MLIR API is relocated under npcomp, this would change to
+  # .../npcomp/_mlir_libs
+  OUTPUT_DIRECTORY "${MLIR_NPCOMP_PYTHON_PACKAGES_DIR}/npcomp_core/mlir/_mlir_libs"
+  RELATIVE_INSTALL_ROOT "../../../.."
+  DECLARED_SOURCES
+    # TODO: This can be chopped down significantly for size.
+    MLIRPythonSources
+    MLIRPythonExtension.AllPassesRegistration
+    NPCOMPPythonSources
+    NPCOMPPythonExtensions
+)
+
+# Bundle the MLIR python sources into our package.
+# The MLIR API is position independent, so we explicitly output it to the mlir/
+# folder as a temporary measure. It will eventually migrate under the npcomp/
+# folder and be accessible under the unified "import npcomp..." namespace.
+add_mlir_python_modules(NPCOMPMLIRPythonModules
+  ROOT_PREFIX "${MLIR_NPCOMP_PYTHON_PACKAGES_DIR}/npcomp_core/mlir"
+  INSTALL_PREFIX "python_packages/npcomp_core/mlir"
+  DECLARED_SOURCES
+    MLIRPythonSources
+    MLIRPythonExtension.AllPassesRegistration
+    # We need the npcomp extensions co-located with the MLIR extensions. When
+    # the namespace is unified, this moves to the below.
+    NPCOMPPythonExtensions
+  COMMON_CAPI_LINK_LIBS
+    NPCOMPPythonCAPI
+)
+
+# Bundle the NPCOMP python sources into our package.
+add_mlir_python_modules(NPCOMPPythonModules
+  ROOT_PREFIX "${MLIR_NPCOMP_PYTHON_PACKAGES_DIR}/npcomp_core"
+  INSTALL_PREFIX "python_packages/npcomp_core"
+  DECLARED_SOURCES
+    NPCOMPPythonSources
+  COMMON_CAPI_LINK_LIBS
+    NPCOMPPythonCAPI
+)
+
