--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -40,6 +40,7 @@ jobs:
           -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ \
           -DPython3_EXECUTABLE=/usr/bin/python3 \
           -DLLVM_ENABLE_ASSERTIONS=ON \
-          -DLLVM_TARGETS_TO_BUILD=host
+          -DLLVM_TARGETS_TO_BUILD=host \
+          -DNPCOMP_ENABLE_PYTORCH=ON
         ninja
         ninja check-npcomp check-frontends-pytorch
